# better-agent-engine

./: .dockerignore  .gitignore  DEVELOPING.md  Dockerfile  Dockerfile.dev  Dockerfile.launcher-api  Dockerfile.launcher-schedule  Dockerfile.launcher-webapp  Dockerfile.max  Makefile  README.md  RELEASING.md
.awman/: Dockerfile.claude  Dockerfile.codex  Dockerfile.opencode  config.json
.awman/workflows/: 02467dc2-0006-0006 (resume): finish builtin sandbox and file tools.json  02467dc2-0006-WI 0006: Builtin sandbox and file tools.json  02a765d2-0013-0013---OpenTelemetry-Metrics-and-Traces.json  0be9ad01-0008-0008--issue-triage-example-agent-across-all-three-client-SDKs.json  102fbd9b-0010-0010--Native-CLI-Subagents--launch_subagent---status-tool-.json  105ea5c1-0011-0011--Configuration-tab-in-MAX.json  2a8387c5-0009-WI-0009--split-client-server-tool-dispatch-in-mixed-assistant-tu.json  54e9b1b4-0002-0002 — Server skeleton, auth, sessions, and client SDKs.json  6c326ee9-0003-Implement 0003 — Full Message Passing (JSON-RPC session loop, MCP wiring, docs).json  7c466b91-0004-0004: baectl CLI and admin API authentication.json  8721ca7d-0012-0012---baectl-quickstart-setup-wizard.json  f7a75f4c-0007-0007: MAX webapp — finish interrupted implementation, test, document, review.json  f7a75f4c-0007-Implement 0007: MAX webapp (bae-max dashboard).json  f7a75f4c-0007-Work Item 0007: MAX Webapp — resume (integration tests + final review).json  f9d435ae-0005-0005 — Parallel Client Handling.json
.claude/: settings.local.json
.github/workflows/: release.yml  test.yml
aspec/: foundation.md
aspec/architecture/: apis.md  design.md  security.md
aspec/devops/: cicd.md  infrastructure.md  localdev.md  operations.md  subagents.md
aspec/genai/: agents.md
aspec/uxui/: cli.md  experience.md  interface.md  setup.md
aspec/work-items/: 0001-server-skeleton.md  0002-session-and-auth.md  0003-full-message-passing.md  0004-baectl-cli.md  0005-parallel-client-handling.md  0006-builtin-tools.md  0007-max-webapp.md  0008-example-code-agents.md  0009-mixed-turn-tool-dispatch.md  0010-cli-subagents.md  0011-configuration-tab-in-max.md  0012-baectl-quickstart.md  0013-opentelemetry-metrics-and-traces.md  0014-harness-launchers.md
bae-max-demo/: config.toml
baectl/: Cargo.toml  Makefile
baectl/src/: admin_client.rs  cli.rs  error.rs  keygen.rs  lib.rs  main.rs  output.rs  setup.rs
baectl/tests/: setup_engine.rs
client-python/: Makefile  README.md  pyproject.toml
client-python/examples/issue-triage/: README.md  main.py
client-python/examples/reference-assistant/: README.md  main.py
client-python/src/bae_py/: __init__.py  config.py  errors.py  files.py  hooks.py  sandbox.py  secure.py  subagent.py  tool.py  types.py
client-python/src/bae_py/harness/: __init__.py  core.py  transport.py
client-python/src/base_client/: __init__.py
client-python/tests/: mock_transport.py  test_files.py  test_harness.py  test_issue_triage_example.py  test_mcp_parity.py  test_sandbox_injection.py  test_sandbox_parity.py  test_secure.py  test_subagent.py  test_subagent_parity.py  test_telemetry.py  test_two_driver_parity.py  test_types.py  test_version.py
client-rust/: Cargo.toml  Makefile  README.md
client-rust/examples/issue-triage/: README.md  main.rs
client-rust/examples/reference-assistant/: README.md  main.rs
client-rust/src/: config.rs  error.rs  files.rs  harness.rs  hooks.rs  lib.rs  sandbox.rs  subagent.rs  telemetry.rs  tool.rs  types.rs
client-typescript/: Makefile  README.md  package-lock.json  package.json  tsconfig.json
client-typescript/examples/: tsconfig.json
client-typescript/src/: config.ts  errors.ts  files.test.ts  files.ts  harness.test.ts  harness.ts  hooks.ts  index.test.ts  index.ts  issue-triage.test.ts  sandbox.test.ts  sandbox.ts  secure.test.ts  secure.ts  subagent.test.ts  subagent.ts  telemetry-noop.test.ts  telemetry.test.ts  telemetry.ts  tool.ts  transport.ts  types.test.ts  types.ts
docker/: bae-max-entrypoint.sh  bae-max-entrypoint.test.sh
docs/: README.md  admin-api.md  client-api.md  message-types.md  profiles.md  quickstart.md
docs/examples/: live-events.md  mcp-profile.md  session-basics.md
docs/guides/: 00-quickstart.md  01-building-a-client.md  02-mcp-servers.md  03-sandboxes.md  04-file-tools.md  05-subagents.md  06-event-streaming.md  07-multi-client-sessions.md  08-issue-triage-agent.md  09-admin-authentication.md  10-max-webapp.md  11-harness-launchers.md  admin-authentication.md  building-a-client.md  event-streaming.md  file-tools.md  harness-launchers.md  issue-triage-agent.md  max-webapp.md  mcp-servers.md  multi-client-sessions.md  quickstart.md  sandboxes.md  subagents.md
launchers/api/: Cargo.toml  Makefile
launchers/api/src/: config.rs  error.rs  http.rs  lib.rs  main.rs  template.rs
launchers/api/tests/: integration.rs
launchers/api/tests/fixtures/webapp-dist/: index.html
launchers/core/: Cargo.toml  Makefile
launchers/core/src/: lib.rs
launchers/schedule/: Cargo.toml  Makefile
launchers/schedule/src/: main.rs
launchers/schedule/tests/: integration.rs
max/: Makefile
scripts/: release.sh
server/: Cargo.toml  Makefile  README.md
server/src/: admin_auth.rs  cli.rs  config.rs  config_file.rs  events.rs  lib.rs  main.rs  telemetry.rs
server/src/api/: error.rs  mod.rs  pagination.rs
server/src/api/admin/: config.rs  keys.rs  mcp.rs  mod.rs  profiles.rs  providers.rs  sandbox.rs  sessions.rs
server/src/api/client/: mod.rs  rpc.rs  sessions.rs
server/src/engine/: broadcast.rs  mcp.rs  mod.rs  provider.rs  sandbox.rs  session.rs  subagent.rs
server/src/store/: keys.rs  migrations.rs  mod.rs  profiles.rs  sessions.rs
server/src/store/migrations/: 0001_schema_version.sql  0002_keys.sql  0003_profiles.sql  0004_sessions.sql  0005_session_events.sql  0006_admin_key_role.sql  0007_profiles_sandboxes.sql  0008_sessions_subagent_tools.sql
server/tests/: admin_auth.rs  admin_config.rs  baectl_cli.rs  e2e_telemetry.rs  integration.rs
server/tests/fixtures/: github_mock_server.py  mcp_echo_server.py
(+112 files in other folders)
