[project]
name = "bae-py"
version = "0.1.0"
description = "Python client library and agent harness for the Better Agent Engine (BAE)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
# httpx backs the default async transport; the harness is otherwise
# dependency-free (tests inject a mock transport and run fully offline).
dependencies = [
    "httpx>=0.28.1",
]

# Marked private until the first release is cut; remove to allow uploads.
classifiers = ["Private :: Do Not Upload"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bae_py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src", "tests"]
line-length = 100
