[package]
name = "bae-rs"
version = "0.1.0"
edition = "2021"
description = "Rust client library and agent harness for the Better Agent Engine (BAE)"
license = "Apache-2.0"
# Flip to allow publishing to crates.io once the first release is cut.
publish = false

[dependencies]
# Filename allow/deny matching for the builtin file tools ([`files`]): the
# harness developer supplies `allow_regex`/`deny_regex` constraints validated
# against each requested path's file name.
regex = "1"
# HTTP transport to the BAE client API (`/api/v1`). `rustls-tls` keeps the TLS
# stack pure-Rust (no OpenSSL); `json` gives typed request/response bodies.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# API (de)serialization — mirrors the server's snake_case wire contract.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Ergonomic error enum for the public `Error` type.
thiserror = "2"
# The local sandbox driver ([`sandbox`]) shells out to the `docker`/`container`
# CLI via `tokio::process`, exactly as the server's driver does — no Docker SDK.
# `process` gives async subprocesses; `io-util` is required by `Command::output`.
# The library still never spawns tasks; it only awaits subprocesses it starts.
tokio = { version = "1", default-features = false, features = ["process", "io-util", "sync"] }

[dev-dependencies]
# Async runtime for the examples and the async unit tests. Not needed by the
# library itself (it only ever awaits, never spawns), so it stays a dev-dep.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# The reference-assistant example lives in a subdirectory so it can grow extra
# files without polluting the examples/ root; declare it explicitly since Cargo
# does not auto-discover nested examples.
[[example]]
name = "reference-assistant"
path = "examples/reference-assistant/main.rs"

# The issue-triage example (Agent 3): a repo-scoped issue-triage agent composing
# file tools, a sandbox shell tool, and the GitHub MCP server. Declared
# explicitly for the same reason as reference-assistant — Cargo does not
# auto-discover nested examples.
[[example]]
name = "issue-triage"
path = "examples/issue-triage/main.rs"
